--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -195,6 +195,7 @@
         "    return False\n",
         "\n",
         "\n",
+        "# formatação do endereço digitado pelo usuário\n",
         "def formatacao_endereco():\n",
         "  \"\"\"\n",
         "    Padroniza as informações de endereço, pedindo para o usuário item a item do endereço\n",
@@ -214,6 +215,7 @@
         "  return endereco\n",
         "\n",
         "\n",
+        "# formatação do telefone digitado pelo usuário\n",
         "def formatacao_telefone():\n",
         "  \"\"\"\n",
         "    Padroniza as informações de telefone,\n",
@@ -229,6 +231,7 @@
         "\n",
         "  telefone = f'({ddd}) {numero[:4]}-{numero[4:]}'\n",
         "  return telefone\n",
+        "\n",
         "\n",
         "# Evita repetições de pratos no cardapio\n",
         "def evitar_repeticao_pratos(lista_cardapio, nome_prato):\n",
@@ -255,6 +258,7 @@
         "    return False\n",
         "\n",
         "\n",
+        "# tabela dos restaurantes\n",
         "def lista_resumida_restaurantes(lista_restaurante):\n",
         "  \"\"\"\n",
         "Listagem resumida dos dados dos restaurantes.\n",
@@ -285,10 +289,9 @@
         "        print(tempo_preparo, 'minutos', end='\\n')\n",
         "  print(\"\\n\")\n",
         "\n",
+        "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E   C A R D Á P I O\n",
-        "#23.10 (leticia) adaptei o Listar Cardápio, agora aparecem o nome e o valor do produto no cardápio\n",
-        "#também inseri nos prints a mensagem para não digitar , no valor e sim .\n",
         "def gestao_cardapio(restaurante, lista_cardapio):\n",
         "    \"\"\"\n",
         "    Permite a gestão de um cardápio de um restaurante.\n",
@@ -373,9 +376,6 @@
         "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E  R E S T A U R A N T E\n",
-        "# adaptado da adriely\n",
-        "#22.10 (leticia)adaptei a opçao de listar, agora, qdo solicitada, ele lista todas as informções do restaurante\n",
-        "\n",
         "def gestao_restaurante(lista_restaurante):\n",
         "  \"\"\"\n",
         "    Permite a gestão de uma lista de restaurantes.\n",
@@ -482,8 +482,7 @@
         "\n",
         "\n",
         "#################################################\n",
-        "\n",
-        "# main\n",
+        "# Parte principal do script\n",
         "print(\"Iniciando Sistema de Gestão de Restaurantes\")\n",
         "print(\"Por aqui você pode gerir informações sobre restaurantes e cardápios\")\n",
         "\n",
@@ -491,8 +490,6 @@
         "lista_restaurante = list()\n",
         "lista_cardapio = list()\n",
         "\n",
-        "#Ideia inicial, depois podemos incrementar novas informações\n",
-        "#cabecalho_lista_restaurante = [\"Nome\", \"Endereço\", \"CEP\", \"Telefone\", \"Tempo de Entrega (minutos)\" ]\n",
         "cabecalho_lista_restaurante = [\"Nome\", \"Endereço\", \"Telefone\", \"Tempo de Entrega (minutos)\" ]\n",
         "cabecalho_lista_cardapio    = [\"Restaurante\", \"Nome do Prato\", \"Preço do Prato\"]\n",
         "\n",
@@ -560,9 +557,7 @@
         "  pergunta = \"Deseja continuar no Sistema de Gerenciamento? [S]/[N]\\t\"\n",
         "  resp_continuar = validacao_respostas(pergunta, ['S','N'])\n",
         "\n",
-        "print(\"\\n\\nSistema Encerrado.\")\n",
-        "\n",
-        "\n"
+        "print(\"\\n\\nSistema Encerrado.\")"
       ],
       "metadata": {
         "colab": {
@@ -571,7 +566,7 @@
         "id": "qwbRTZSDwkQY",
         "outputId": "2ce97d19-101d-490b-e15e-c71d2f9fc853"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
