add função att_nome_restaurante

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -290,6 +290,22 @@
         "  print(\"\\n\")\n",
         "\n",
         "\n",
+        "# função que atualiza o nome do restaurante na lista dos cardápios\n",
+        "def att_nome_restaurante(nome_antigo, nome_novo, lista_cardapio):\n",
+        "  \"\"\"\n",
+        "  A função é chamada no momento de edição do nome do restaurante na gestão de restaurantes\n",
+        "  Ela realiza a troca do nome na lista de cardápio para ocorrer o acordo entre as listas\n",
+        "  Parâmetros de entrada:\n",
+        "  - nome_antigo (str): O nome anterior a edição\n",
+        "  - nome_novo (str): O nome após a edição\n",
+        "  - lista_cardapio(list): Lista de listas contendo os pratos de todos os restaurantes\n",
+        "\n",
+        "  \"\"\"\n",
+        "  for i in range(len(lista_cardapio)):\n",
+        "    if lista_cardapio[i][0] == nome_antigo:\n",
+        "      lista_cardapio[i][0] = nome_novo\n",
+        "  return lista_cardapio\n",
+        "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E   C A R D Á P I O\n",
         "def gestao_cardapio(restaurante, lista_cardapio):\n",
@@ -376,7 +392,7 @@
         "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E  R E S T A U R A N T E\n",
-        "def gestao_restaurante(lista_restaurante):\n",
+        "def gestao_restaurante(lista_restaurante, lista_cardapio):\n",
         "  \"\"\"\n",
         "    Permite a gestão de uma lista de restaurantes.\n",
         "    Oferece opções de listagem, adição, edição e remoção de restaurantes.\n",
@@ -446,6 +462,9 @@
         "\n",
         "      if pergunta_edicao == \"N\":\n",
         "        nome = input('Qual o novo nome? ').title()\n",
+        "        # mudar nome na lista de cardapios\n",
+        "        # a função deve receber nome, lista_restaurante[editar][0] (nome antigo) e a lista de cardapios\n",
+        "        lista_cardapio = att_nome_restaurante(lista_restaurante[editar][0], nome, lista_cardapio)\n",
         "        lista_restaurante[editar][0] = nome\n",
         "      elif pergunta_edicao == \"E\":\n",
         "        endereco = input('Qual o novo endereço completos? ')\n",
@@ -479,7 +498,7 @@
         "      print(\"\")\n",
         "  elif comando == 'T':\n",
         "    lista_resumida_restaurantes(lista_restaurante)\n",
-        "\n",
+        "  return lista_restaurante, lista_cardapio\n",
         "\n",
         "#################################################\n",
         "# Parte principal do script\n",
@@ -529,13 +548,13 @@
         "    1 - Para abrir a gestão de restaurantes\n",
         "    2 - Para abrir a gestão de Cardápios\n",
         "    3 - Sair do Sistema \\n\"\"\"\n",
-        "  resp_restaurante_ou_cardapio =  validacao_respostas(pergunta, ['1','2', '3'])\n",
+        "  resp_restaurante_ou_cardapio =  validacao_respostas(pergunta, ['1','2','3'])\n",
         "  if resp_restaurante_ou_cardapio == '1':\n",
         "    #abrir a gestão de restaurante\n",
         "    print(\"- - - - -> Gestão de Restaurantes <- - - - -\")\n",
         "    continua = 'S'\n",
         "    while continua == 'S':\n",
-        "      gestao_restaurante(lista_restaurante)\n",
+        "      lista_restaurante, lista_cardapio = gestao_restaurante(lista_restaurante, lista_cardapio)\n",
         "      pergunta = \"Deseja continuar na Gestão de Restaurante? [S]/[N]\\t\"\n",
         "      continua = validacao_respostas(pergunta, ['S', 'N'])\n",
         "\n",
@@ -564,9 +583,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "2ce97d19-101d-490b-e15e-c71d2f9fc853"
+        "outputId": "dce4a795-939a-4518-f06a-1f0ced3e8677"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,23 +599,60 @@
             "    1 - Para abrir a gestão de restaurantes\n",
             "    2 - Para abrir a gestão de Cardápios\n",
             "    3 - Sair do Sistema \n",
-            "2\n",
-            "- - - - -> Gestão de Cardápios <- - - - -\n",
-            "Informe o restaurante:\t\n",
+            "1\n",
+            "- - - - -> Gestão de Restaurantes <- - - - -\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante          --- A\n",
+            "Para remover um restaurante            --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar os restaurantes            --- L\n",
+            "Para resumo dos restaurantes           --- T\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "e\n",
+            "Lista dos nomes dos restaurantes\n",
             "  \t Nome\n",
             "1\t Caluma\n",
             "2\t Toca do Pintado\n",
             "3\t Brasador Steakhouse\n",
             "4\t Luso Brasileiro\n",
             "5\t Alimentare\n",
-            "Informe o índice: \t2\n",
+            "Informe o índice: \t1\n",
+            "O que deseja editar?\n",
+            "          Nome                       --- N\n",
+            "          Endereço                   --- E\n",
+            "          Telefone                   --- T\n",
+            "          Tempo de Preparo do Pedido --- P\n",
+            "      n\n",
+            "Qual o novo nome? Calumma\n",
+            "[['Restaurante', 'Nome do Prato', 'Preço do Prato'], ['Calumma', 'Empanado de peixe', 65.0], ['Luso Brasileiro', 'Dobradinha', 37], ['Toca do Pintado', 'Moqueca', 129], ['Alimentare', 'Marmitex P', 35], ['Calumma', 'Caipirinha', 30.0], ['Calumma', 'Polenta Frita', 32.6], ['Alimentare', 'Marmitex G', 50], ['Toca do Pintado', 'Filé à Parmegiana', 109]]\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\ts\n",
+            "\n",
+            "  Próxima Ação:\n",
+            "    1 - Para abrir a gestão de restaurantes\n",
+            "    2 - Para abrir a gestão de Cardápios\n",
+            "    3 - Sair do Sistema \n",
+            "2\n",
+            "- - - - -> Gestão de Cardápios <- - - - -\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Calumma\n",
+            "2\t Toca do Pintado\n",
+            "3\t Brasador Steakhouse\n",
+            "4\t Luso Brasileiro\n",
+            "5\t Alimentare\n",
+            "Informe o índice: \t1\n",
             "\t\tGESTÃO DE CARDÁPIO:\n",
             "Foi selecionado o seguinte restaurante:\n",
-            "- Toca do Pintado\n",
+            "- Calumma\n",
             "\n",
             "    Opções de Ações:\n",
             "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio ou [N] Para retornar a Gestão de Cardápios.\n",
-            "    O que deseja fazer: \tn\n",
+            "    O que deseja fazer: \tl\n",
+            "Cardápio do restaurante Calumma:\n",
+            "1 - Prato: Empanado de peixe, Preço: R$ 65.00\n",
+            "2 - Prato: Caipirinha, Preço: R$ 30.00\n",
+            "3 - Prato: Polenta Frita, Preço: R$ 32.60\n",
             "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
             "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
             "\n",
@@ -605,6 +661,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Pjb9NksPX4th"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
