Correção na função de Formatacao de telefone

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -117,8 +117,8 @@
         "        # digite uma ação inválida\n",
         "    pergunta = \"\"\"\n",
         "    Próxima Ação:\n",
-        "      1 - Para abrir a gestão de restaurantes\n",
-        "      2 - Para abrir a gestão de Cardápios\n",
+        "      1 - Para abrir a Gestão de Restaurantes\n",
+        "      2 - Para abrir a Gestão de Cardápios\n",
         "      3 - Sair do Sistema \\n\\t =>   \"\"\"\n",
         "    resp_restaurante_ou_cardapio =  validacao_respostas(pergunta, ['1','2','3'])\n",
         "    if resp_restaurante_ou_cardapio == '1':\n",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "SLlpWI6Y2MyK"
       },
-      "execution_count": 103,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "uDKcQDyC4JdA"
       },
-      "execution_count": 104,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -340,7 +340,7 @@
       "metadata": {
         "id": "261Tp1qP6O25"
       },
-      "execution_count": 105,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
       "metadata": {
         "id": "AU9xu9xU67oD"
       },
-      "execution_count": 106,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "l0cFsxqp9o4p"
       },
-      "execution_count": 107,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -446,27 +446,28 @@
         "def formatacao_telefone():\n",
         "  \"\"\"\n",
         "    Padroniza as informações de telefone,\n",
-        "    pedindo ao usuário separadamente o ddd e o número do telefone\n",
+        "    pedindo ao usuário separadamente o DDD e o número do telefone\n",
         "\n",
         "    Parâmetros:\n",
         "        Não há parâmetros de entrada\n",
         "    Retorno:\n",
-        "        str:telefone no formado (00) 0000-0000 ou (00) 0000-00000\n",
+        "        str: telefone no formato (00) 0000-0000 ou (00) 00000-0000\n",
         "  \"\"\"\n",
-        "  ddd    = input('Informe o DDD (apenas números):\\t')\n",
+        "  ddd = input('Informe o DDD (apenas números):\\t')\n",
         "  while len(ddd) != 2:\n",
         "    ddd = input('Resposta inválida.\\nInforme DDD válido:')\n",
         "\n",
         "  numero = input('Informe o número (apenas números):\\t')\n",
-        "  while len(numero) != 8 or len(numero) != 8:\n",
-        "    ddd = input('Resposta inválida.\\nInforme número de telefone válido:')\n",
+        "  while len(numero) not in (8, 9):\n",
+        "    numero = input('Resposta inválida.\\nInforme número de telefone válido:')\n",
+        "\n",
         "  telefone = f'({ddd}) {numero[:4]}-{numero[4:]}'\n",
         "  return telefone"
       ],
       "metadata": {
-        "id": "uiVtXqSOBo5o"
+        "id": "61BxV_rLpgvS"
       },
-      "execution_count": 108,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -505,7 +506,7 @@
       "metadata": {
         "id": "Z_Bd5JdpDkg3"
       },
-      "execution_count": 109,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -549,7 +550,7 @@
       "metadata": {
         "id": "owt_-DazESLh"
       },
-      "execution_count": 110,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -580,7 +581,7 @@
       "metadata": {
         "id": "P_UZpYOJE9Rv"
       },
-      "execution_count": 111,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -613,7 +614,7 @@
       "metadata": {
         "id": "qH7jKugREx7w"
       },
-      "execution_count": 112,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -661,7 +662,7 @@
       "metadata": {
         "id": "v6zM2-kNF5WI"
       },
-      "execution_count": 113,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -745,7 +746,7 @@
         "                nome = input('Qual o novo nome? ').title()\n",
         "                lista_cardapio[indice_rest_prato][1] = nome\n",
         "            elif pergunta == \"P\":\n",
-        "                preco_prato = input('Atenção, não use vírgula(,) e sim ponto(.) \\n Qual o novo preço?  ')\n",
+        "                preco_prato = input('Qual o novo preço?  \\n Atenção, use ponto(.) e não (,)  ')\n",
         "                lista_cardapio[indice_rest_prato][2] = float(preco_prato)  # Converte para float\n",
         "            else:\n",
         "                print('Função inválida')\n",
@@ -764,7 +765,7 @@
       "metadata": {
         "id": "RGHqWUkfGZhm"
       },
-      "execution_count": 114,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -806,7 +807,7 @@
       "metadata": {
         "id": "u8ncfl5OHJmv"
       },
-      "execution_count": 115,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -844,7 +845,7 @@
       "metadata": {
         "id": "qwbRTZSDwkQY"
       },
-      "execution_count": 116,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -863,12 +864,12 @@
       ],
       "metadata": {
         "id": "PrDbDYqI9RTI",
-        "outputId": "034a83e1-361d-4d2a-9b67-a5ba09f8d1a1",
+        "outputId": "2679b76b-a0d4-4a76-a42b-623b32a1a469",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 117,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -879,14 +880,174 @@
             "Deseja iniciar o sistema?[S]/[N]\ts\n",
             "\n",
             "    Próxima Ação:\n",
-            "      1 - Para abrir a gestão de restaurantes\n",
-            "      2 - Para abrir a gestão de Cardápios\n",
+            "      1 - Para abrir a Gestão de Restaurantes\n",
+            "      2 - Para abrir a Gestão de Cardápios\n",
+            "      3 - Sair do Sistema \n",
+            "\t =>   1\n",
+            "- - - - -> Gestão de Restaurantes <- - - - -\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante          --- A\n",
+            "Para remover um restaurante            --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar os restaurantes            --- L\n",
+            "Para resumo dos restaurantes           --- T\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   a\n",
+            "Digite o nome do restaurante: red\n",
+            "Digite as informações do endereço:\n",
+            "Informe a rua:\t\trree\n",
+            "Informe o número:\t55\n",
+            "Informe o bairro:\tfrd\n",
+            "Informe a cidade:\tew\n",
+            "Informe a sigla da unidade federativa:\tws\n",
+            "Digite as informações do telefone do restaurante: \n",
+            "Informe o DDD (apenas números):\t54\n",
+            "Informe o número (apenas números):\t123456789\n",
+            "Digite tempo de preparo do pedido: 55\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\ts\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante          --- A\n",
+            "Para remover um restaurante            --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar os restaurantes            --- L\n",
+            "Para resumo dos restaurantes           --- T\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   l\n",
+            "Lista de restaurantes:\n",
+            "Nome: Red\n",
+            "Endereço: Rua rree, número 55, Frd, Ew-WS\n",
+            "Telefone: (54) 1234-56789\n",
+            "Tempo de Preparo: 55 minutos\n",
+            "Cardápio:\n",
+            " -> Não há nenhum prato cadastrado neste restaurante\n",
+            "\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\ts\n",
+            "\n",
+            "    Próxima Ação:\n",
+            "      1 - Para abrir a Gestão de Restaurantes\n",
+            "      2 - Para abrir a Gestão de Cardápios\n",
             "      3 - Sair do Sistema \n",
             "\t =>   2\n",
             "- - - - -> Gestão de Cardápios <- - - - -\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Red\n",
+            "Informe o índice: \t1\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Red\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um item do cardápio     --- A\n",
+            "Para remover um item do cardápio       --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar o cardápio do restaurante  --- L\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   a\n",
+            "Digite o nome do prato: ttt\n",
+            "Digite o preço do prato:  \n",
+            " Atenção, não use vírgula(,) e sim ponto(.)  90\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\ts\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Red\n",
+            "Informe o índice: \t1\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Red\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um item do cardápio     --- A\n",
+            "Para remover um item do cardápio       --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar o cardápio do restaurante  --- L\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   a\n",
+            "Digite o nome do prato: aaa\n",
+            "Digite o preço do prato:  \n",
+            " Atenção, não use vírgula(,) e sim ponto(.)  55\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\ts\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Red\n",
+            "Informe o índice: \t1\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Red\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um item do cardápio     --- A\n",
+            "Para remover um item do cardápio       --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar o cardápio do restaurante  --- L\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   l\n",
+            "Cardápio do restaurante Red:\n",
+            "1 - Prato: Ttt, Preço: R$ 90.00\n",
+            "2 - Prato: Aaa, Preço: R$ 55.00\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\ts\n",
             "\n",
-            "Não há restaurante cadastrado para realizar a gestão de cardápios.\n",
+            "    Próxima Ação:\n",
+            "      1 - Para abrir a Gestão de Restaurantes\n",
+            "      2 - Para abrir a Gestão de Cardápios\n",
+            "      3 - Sair do Sistema \n",
+            "\t =>   1\n",
+            "- - - - -> Gestão de Restaurantes <- - - - -\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante          --- A\n",
+            "Para remover um restaurante            --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar os restaurantes            --- L\n",
+            "Para resumo dos restaurantes           --- T\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   e\n",
+            "Lista dos nomes dos restaurantes\n",
+            "  \t Nome\n",
+            "1\t Red\n",
+            "Informe o índice: \t1\n",
+            "O que deseja editar?\n",
+            "            Nome                       --- N\n",
+            "            Endereço                   --- E\n",
+            "            Telefone                   --- T\n",
+            "            Tempo de Preparo do Pedido --- P\n",
+            "            \t =>   n\n",
+            "Qual o novo nome? pink\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\ts\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante          --- A\n",
+            "Para remover um restaurante            --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar os restaurantes            --- L\n",
+            "Para resumo dos restaurantes           --- T\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   t\n",
+            "Nome           |Endereço                 |Telefone      |Tempo de Entrega\n",
+            "-------------------------------------------------------------------------\n",
+            "Pink           |Rua rree, número 55, F...|(54) 1234-56789|55 minutos\n",
             "\n",
+            "\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\ts\n",
+            "\n",
+            "    Próxima Ação:\n",
+            "      1 - Para abrir a Gestão de Restaurantes\n",
+            "      2 - Para abrir a Gestão de Cardápios\n",
+            "      3 - Sair do Sistema \n",
+            "\t =>   2\n",
+            "- - - - -> Gestão de Cardápios <- - - - -\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Pink\n",
+            "Informe o índice: \t1\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Pink\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um item do cardápio     --- A\n",
+            "Para remover um item do cardápio       --- R\n",
+            "Para editar informações                --- E\n",
+            "Para listar o cardápio do restaurante  --- L\n",
+            "Para voltar a Gestão de Restaurantes   --- N\n",
+            "\t =>   l\n",
+            "Cardápio do restaurante Pink:\n",
+            "1 - Prato: Ttt, Preço: R$ 90.00\n",
+            "2 - Prato: Aaa, Preço: R$ 55.00\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
             "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
             "\n",
             "\n",
