--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -42,7 +42,7 @@
         "  - Ricardo Mazzeo\n",
         "\n",
         "\n",
-        "> Finalizado em: Nov/2023"
+        "> Finalizado em: Out/2023"
       ],
       "metadata": {
         "id": "DURysbOkyCl_"
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "SLlpWI6Y2MyK"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +203,7 @@
       "metadata": {
         "id": "uDKcQDyC4JdA"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -340,7 +340,7 @@
       "metadata": {
         "id": "261Tp1qP6O25"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
       "metadata": {
         "id": "AU9xu9xU67oD"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "l0cFsxqp9o4p"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
       "metadata": {
         "id": "61BxV_rLpgvS"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,7 +506,7 @@
       "metadata": {
         "id": "Z_Bd5JdpDkg3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -550,7 +550,7 @@
       "metadata": {
         "id": "owt_-DazESLh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "P_UZpYOJE9Rv"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
       "metadata": {
         "id": "qH7jKugREx7w"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +662,7 @@
       "metadata": {
         "id": "v6zM2-kNF5WI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -765,7 +765,7 @@
       "metadata": {
         "id": "RGHqWUkfGZhm"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -807,7 +807,7 @@
       "metadata": {
         "id": "u8ncfl5OHJmv"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
       "metadata": {
         "id": "qwbRTZSDwkQY"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +869,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
